update studies and pdf

--- a/_studies/2022-03-08-10.3390-jpm12030419.md
+++ b/_studies/2022-03-08-10.3390-jpm12030419.md
@@ -4,13 +4,13 @@ title:         Journal of Personalized Medicine
 authors:       'Bania, A, Pitsikakis, K, Mavrovounis, G, et al.'
 status:        default
 en:
-  subtitle:    'Therapeutic Vitamin D Supplementation Following COVID-19 Diagnosis: Where Do We Stand?—A Systematic Review'
-  description: 'Vitamin D has known immunomodulatory activity and multiple indications exist supporting its potential use against SARS-CoV-2 infection in the setting of the current pandemic. The purpose of this systematic review is to examine the efficacy of vitamin D administered to adult patients following COVID-19 diagnosis in terms of length of hospital stay, intubation, ICU admission and mortality rates. Therefore, PubMed and Scopus databases were searched for original articles referring to the aforementioned parameters. Of the 1376 identified studies, eleven were finally included. Vitamin D supplements, and especially calcifediol, were shown to be useful in significantly reducing ICU admissions and/or mortality in four of the studies, but not in diminishing the duration of hospitalization of COVID-19 patients. Due to the large variation in vitamin D supplementation schemes no absolute conclusions can be drawn until larger randomized controlled trials are completed. However, calcifediol administered to COVID-19 patients upon diagnosis represents by far the most promising agent and should be the focus of upcoming research efforts. '
-  tags:        [vitamin D, hospitalization, ICU admission, intubation, mortality]
+  subtitle:    'Therapeutic Vitamin D Supplementation Following COVID-19 Diagnosis: Where Do We Stand?-A Systematic Review'
+  description: 'Vitamin D has known immunomodulatory activity and multiple indications exist supporting its potential use against SARS-CoV-2 infection in the setting of the current pandemic. The purpose of this systematic review is to examine the efficacy of vitamin D administered to adult patients following COVID-19 diagnosis in terms of length of hospital stay, intubation, ICU admission and mortality rates. Therefore, PubMed and Scopus databases were searched for original articles referring to the aforementioned parameters. Of the 1376 identified studies, eleven were finally included. Vitamin D supplements, and especially calcifediol, were shown to be useful in significantly reducing ICU admissions and/or mortality in four of the studies, but not in diminishing the duration of hospitalization of COVID-19 patients. Due to the large variation in vitamin D supplementation schemes no absolute conclusions can be drawn until larger randomized controlled trials are completed. However, calcifediol administered to COVID-19 patients upon diagnosis represents by far the most promising agent and should be the focus of upcoming research efforts.'
+  tags:        [ICU admission, hospitalization, intubation, mortality, vitamin D]
 de:
   subtitle:    'Therapeutische Vitamin-D-Supplementierung nach COVID-19-Diagnose: Wo stehen wir? - Eine systematische Überprüfung'
-  description: 'Vitamin D hat bekanntermaßen eine immunmodulatorische Wirkung und es gibt zahlreiche Hinweise, die seinen potenziellen Einsatz gegen die SARS-CoV-2-Infektion im Rahmen der aktuellen Pandemie unterstützen. Ziel dieser systematischen Übersichtsarbeit ist es, die Wirksamkeit von Vitamin D bei erwachsenen Patienten nach einer COVID-19-Diagnose im Hinblick auf die Dauer des Krankenhausaufenthalts, die Intubation, die Aufnahme in die Intensivstation und die Sterblichkeitsrate zu untersuchen. Daher wurden die Datenbanken PubMed und Scopus nach Originalartikeln zu den oben genannten Parametern durchsucht. Von den 1376 identifizierten Studien wurden schließlich elf eingeschlossen. Vitamin-D-Präparate, insbesondere Calcifediol, erwiesen sich in vier der Studien als nützlich, um die Zahl der Aufnahmen auf der Intensivstation und/oder die Sterblichkeitsrate signifikant zu senken, nicht jedoch, um die Dauer des Krankenhausaufenthalts von COVID-19-Patienten zu verkürzen. Aufgrund der großen Unterschiede bei den Vitamin-D-Supplementierungsschemata können keine absoluten Schlussfolgerungen gezogen werden, bevor nicht größere randomisierte kontrollierte Studien abgeschlossen sind. Calcifediol, das COVID-19-Patienten bei der Diagnose verabreicht wird, ist jedoch bei weitem das vielversprechendste Mittel und sollte im Mittelpunkt künftiger Forschungsbemühungen stehen.' 
-  tags:        [Vitamin D, Krankenhausaufenthalt, Aufnahme auf der Intensivstation, Intubation, Sterblichkeit]
+  description: 'Vitamin D hat bekanntermaßen eine immunmodulatorische Wirkung und es gibt zahlreiche Hinweise, die seinen potenziellen Einsatz gegen die SARS-CoV-2-Infektion im Rahmen der aktuellen Pandemie unterstützen. Ziel dieser systematischen Übersichtsarbeit ist es, die Wirksamkeit von Vitamin D bei erwachsenen Patienten nach einer COVID-19-Diagnose im Hinblick auf die Dauer des Krankenhausaufenthalts, die Intubation, die Aufnahme in die Intensivstation und die Sterblichkeitsrate zu untersuchen. Daher wurden die Datenbanken PubMed und Scopus nach Originalartikeln zu den oben genannten Parametern durchsucht. Von den 1376 identifizierten Studien wurden schließlich elf eingeschlossen. Vitamin-D-Präparate, insbesondere Calcifediol, erwiesen sich in vier der Studien als nützlich, um die Zahl der Einweisungen in die Intensivstation und/oder die Sterblichkeitsrate signifikant zu senken, nicht jedoch, um die Dauer des Krankenhausaufenthalts von COVID-19-Patienten zu verkürzen. Aufgrund der großen Unterschiede bei den Vitamin-D-Supplementierungsschemata können keine absoluten Schlussfolgerungen gezogen werden, bevor nicht größere randomisierte kontrollierte Studien abgeschlossen sind. Calcifediol, das COVID-19-Patienten bei der Diagnose verabreicht wird, ist jedoch bei weitem das vielversprechendste Mittel und sollte im Mittelpunkt künftiger Forschungsbemühungen stehen.' 
+  tags:        [Intensivstation, Krankenhausaufenthalt, Intubation, Sterblichkeit, Vitamin D]
 group:         'Treatments'
 credit:        https://doi.org/10.3390/jpm12030419
 ---
